# qa_guru_lesson19_mobile_hw

./: pyproject.toml
mobile_tests_lesson_19/: browserstack_sample.py
tests/: conftest.py
tests/android/: test_wikipedia.py
